--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -126,7 +126,13 @@
                                 <li class="nav-item ">
                                     <a id="child-trogiang-tasklist" class="child-nav-link nav-link "
                                        href="@Url.Action("TaskList", "TeachingAssistant")">
-                                        Công việc
+                                        Quản lý công việc
+                                    </a>
+                                </li>
+                                <li class="nav-item ">
+                                    <a id="child-trogiang-reviewtask" class="child-nav-link nav-link "
+                                       href="@Url.Action("Index", "ReviewTask")">
+                                        Đánh giá công việc
                                     </a>
                                 </li>
                             </ul>
