--- a/Views/TeachingAssistant/TaskList.cshtml
+++ b/Views/TeachingAssistant/TaskList.cshtml
@@ -51,7 +51,7 @@
                 </button>
             </div>
             <div class="modal-body" id="contentTaskDetail">
-              
+
             </div>
             <div class="modal-footer">
                 <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
@@ -61,6 +61,7 @@
     </div>
 </div>
 
-<script src="~/Validation/teachingassistant/load.js"></script>
-<script src="~/Validation/teacher/teachingassistant/viewAddTask.js"></script>
-<script src="~/Validation/teacher/teachingassistant/taskDetail.js"></script>
+<script type="text/javascript" src="~/Validation/teachingassistant/load.js"></script>
+<script type="text/javascript" src="~/Validation/teacher/teachingassistant/viewAddTask.js"></script>
+<script type="text/javascript" src="~/Validation/teacher/teachingassistant/filterTask.js"></script>
+<script type="text/javascript" src="~/Validation/teacher/teachingassistant/taskDetail.js"></script>
